--- a/Copy_of_Практика_Python.ipynb
+++ b/Copy_of_Практика_Python.ipynb
@@ -53,9 +53,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "358cd299-e4d9-4bd2-ef29-af948a428f4d"
+        "outputId": "5d4c6bc9-9842-4b6c-f2b3-785d02eafc39"
       },
-      "execution_count": 2,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
@@ -85,9 +85,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4d7665c8-af9c-4622-eb1d-e4c4c8e1c411"
+        "outputId": "d53fbb1c-de85-44d8-d84c-ca4501af21d5"
       },
-      "execution_count": 3,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,13 +109,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 54,
       "metadata": {
         "id": "FyRjV6-LLYEc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "110b7489-03d5-478b-ce67-7a8d6a36099d"
+        "outputId": "f0824bc7-9e58-49fb-d126-75f64c8eb611"
       },
       "outputs": [
         {
@@ -161,9 +161,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0ae65753-86ad-4f97-aded-63ecd9376949"
+        "outputId": "1e08a17b-495a-4216-f16c-b3e0faa32031"
       },
-      "execution_count": 13,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,9 +201,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1b4b3bc1-c623-45bd-9183-c8862d7810ad"
+        "outputId": "b6fb1d6c-a05c-4bcd-ad61-beb175005ef3"
       },
-      "execution_count": 16,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,9 +237,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4c9f439e-700a-4399-e988-676303c39e54"
+        "outputId": "aeeb8eda-13f9-44a3-c70a-997b196a62f5"
       },
-      "execution_count": 17,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
@@ -274,30 +274,35 @@
     {
       "cell_type": "code",
       "source": [
+        "result = []\n",
         "numbers = [    \n",
         "    386, 462, 47, 418, 907, 344, 236, 375, 823, 566, 597, 978, 328, 615, 953, 345, \n",
         "    399, 162, 758, 219, 918, 237, 412, 566, 826, 248, 866, 950, 626, 949, 687, 217, \n",
         "    815, 67, 104, 58, 512, 24, 892, 894, 767, 553, 81, 379, 843, 831, 445, 742, 717, \n",
         "    958,743, 527\n",
         "    ]\n",
-        "for "
+        "for num in numbers:\n",
+        "  if num < 237:\n",
+        "    break\n",
+        "  elif num % 2 == 0:\n",
+        "    result.append(num)\n",
+        "  \n",
+        "print(*result)"
       ],
       "metadata": {
         "id": "v4vWigO_PN3x",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 132
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ee6a28d1-d1f5-4723-a809-af2d09a6ac2f"
+        "outputId": "ab1fafad-0ed0-4e10-d189-fe2b665c43b4"
       },
-      "execution_count": 20,
+      "execution_count": 58,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-728cea9604e4>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    result = list(map(lambda x: if x % 2 == 0 and x >= 237 x, numbers))\u001b[0m\n\u001b[0m                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "386 462\n"
           ]
         }
       ]
@@ -320,19 +325,42 @@
       "source": [
         "test_list=['Eeny', 'meeny', 'miney', 'moe', 'Catch', 'a', 'tiger', 'by', 'his', 'toe', 'If', 'he', 'squeals', 'let', 'him', 'go', 'Eeny', 'meeny', 'miney', 'moe']"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "test_dict = dict()\n",
+        "for name in test_list:\n",
+        "  if name in test_dict:\n",
+        "    test_dict[name] += 1\n",
+        "  else: test_dict[name] = 1\n",
+        "\n",
+        "result = []\n",
+        "\n",
+        "for name in test_dict:\n",
+        "  if test_dict[name] == 1:\n",
+        "    result.append(name)\n",
+        "print(result)\n"
       ],
       "metadata": {
-        "id": "_nS3qTKhPY80"
+        "id": "_nS3qTKhPY80",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "706a8840-afcc-4432-b5bd-c8d0aeb52b71"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Catch', 'a', 'tiger', 'by', 'his', 'toe', 'If', 'he', 'squeals', 'let', 'him', 'go']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -354,13 +382,45 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "d1 = {'a': 100, 'b': 200, 'c':300}\n",
+        "d2 = {'a': 300, 'b': 200, 'd':400}\n",
+        "\n",
+        "result = dict()\n",
+        "used = set()\n",
+        "\n",
+        "for key1 in d1:\n",
+        "  if key1 in used:\n",
+        "    continue\n",
+        "  elif key1 in d2:\n",
+        "      result[key1] = d1[key1] + d2[key1]\n",
+        "      used.add(key1)\n",
+        "  else:\n",
+        "    result[key1] = d1[key1]\n",
+        "  \n",
+        "\n",
+        "for key2 in d2:\n",
+        "  if key2 not in used:\n",
+        "    result[key2] = d2[key2]\n",
+        "\n",
+        "print(result)"
       ],
       "metadata": {
-        "id": "LXMrGttHPeEh"
+        "id": "LXMrGttHPeEh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6b8d9b4b-6ff1-4e02-98b9-8b3a09da80b2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'a': 400, 'b': 400, 'c': 300, 'd': 400}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -377,13 +437,38 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "def foo(seq):\n",
+        "  bases = {name: 0 for name in 'atgc'}\n",
+        "  for base in seq:\n",
+        "    if base == 'a':\n",
+        "      bases[base] +=1\n",
+        "    elif base == 't':\n",
+        "      bases[base] += 1\n",
+        "    elif base == 'g':\n",
+        "     bases[base] += 1\n",
+        "    else:\n",
+        "      bases[base] += 1\n",
+        "  return bases\n",
+        "\n",
+        "print(foo('atttgc'))\n"
       ],
       "metadata": {
-        "id": "K8t3hIdcQDrY"
+        "id": "K8t3hIdcQDrY",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "708d020a-5603-4871-aed9-c94bf5256d41"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'a': 1, 't': 3, 'g': 1, 'c': 1}\n"
+          ]
+        }
+      ]
     }
   ]
 }
