--- a/Copy_of_Практика_2_Python.ipynb
+++ b/Copy_of_Практика_2_Python.ipynb
@@ -55,7 +55,7 @@
         },
         "outputId": "ae0715e1-c990-4441-e8e7-8ed4a8bcc4a8"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,7 +87,7 @@
         },
         "outputId": "ceac6f7a-9e16-45b3-f8c1-894e938fb4fd"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,7 +109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "FyRjV6-LLYEc",
         "colab": {
@@ -153,7 +153,7 @@
         },
         "outputId": "322e99ff-eb34-404a-c4e6-46386c7ff302"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -315,7 +315,7 @@
       "source": [
         "test_list=['Eeny', 'meeny', 'miney', 'moe', 'Catch', 'a', 'tiger', 'by', 'his', 'toe', 'If', 'he', 'squeals', 'let', 'him', 'go', 'Eeny', 'meeny', 'miney', 'moe']"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -331,7 +331,7 @@
         },
         "outputId": "41d542d1-1a52-4164-b7e2-4f9442392f81"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -368,7 +368,8 @@
         "\n",
         "result = dict()\n",
         "\n",
-        "keys = list(d1.keys()) + list(d2.keys())\n",
+        "keys = set(list(d1.keys()) + list(d2.keys()))\n",
+        "\n",
         "\n",
         "for key in keys:\n",
         "  if key in d1 and key in d2:\n",
@@ -385,15 +386,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f94552d3-6966-4551-9f3c-365687a788b2"
+        "outputId": "5bf452d4-9216-48a9-b80e-a4c8a0bb679e"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'a': 400, 'b': 400, 'c': 300, 'd': 400}\n"
+            "{'d': 400, 'b': 400, 'c': 300, 'a': 400}\n"
           ]
         }
       ]
@@ -428,7 +429,7 @@
         },
         "outputId": "370ce47b-a337-4126-89d5-70bc381dc514"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
